--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["ruchei-ffi-context", "ruchei-ffi-core", "ruchei-ffi-tracing"]
+members = ["ruchei-ffi-core", "ruchei-ffi-tracing"]
 
 [workspace.package]
 edition = "2021"
@@ -25,11 +25,11 @@ authors.workspace = true
 rust-version.workspace = true
 
 [workspace.dependencies]
-ruchei-ffi-context = { path = "ruchei-ffi-context" }
 ruchei-ffi-core = { path = "ruchei-ffi-core" }
 ruchei-ffi-tracing = { path = "ruchei-ffi-tracing" }
 
 abi_stable = { version = "0.11.3", default-features = false }
+async-ffi = "0.5.0"
 bumpalo = { version = "3.16.0", features = ["collections"] }
 dashmap = "6.1.0"
 libloading = "0.8.6"
